--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <label for="heightinput">Height in cm</label>
     <input type="text" id="heightinput" name="heightinput" size="10" />
 
-    <label for="BMIoutput">Your BMI:</label>
+    <label for="BMIoutput">Your BMI dddddd:</label>
     <output id="bmioutput" name="bmioutput"></output>
   </body>
 </html>
