--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMI Calculator</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>BMI Calculator</h1>
@@ -17,8 +18,11 @@
 
     <label for="heightinput">Height in cm</label>
     <input type="text" id="heightinput" name="heightinput" size="10" />
+    <br />
+    <button>Calculate</button>
+    <br />
 
-    <label for="BMIoutput">Your BMI dddddd:</label>
+    <label for="BMIoutput">Your BMI:</label>
     <output id="bmioutput" name="bmioutput"></output>
   </body>
 </html>
