--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
+    <div class="calculator-container">
+      <h1>BMI CALCULATOR</h1>
+      <h3>Could be a little offensive</h3>
+      <p>Height in centimeters:</p>
+      <input class="height-input-field" type="text" />
+      <p>weight in kilograms:</p>
+      <input class="weight-input-field" type="text" /><br />
+      <button class="calculate">Calculate</button>
+    </div>
+    <h3 class="result"></h3>
+    <p class="result-statement"></p>
+    <script src="script.js"></script>
+  </body>
+</html>
+
+<!-- <body>
     <h1>BMI Calculator</h1>
     <p>This is a simple BMI calculator</p>
     <br />
@@ -19,10 +36,9 @@
     <label for="heightinput">Height in cm</label>
     <input type="text" id="heightinput" name="heightinput" size="10" />
     <br />
-    <button>Calculate</button>
+    <button class="btn calculate">Calculate</button>
     <br />
 
     <label for="BMIoutput">Your BMI:</label>
-    <output id="bmioutput" name="bmioutput"></output>
-  </body>
-</html>
+    <output class="bmioutput" name="bmioutput"></output>
+  <!-- </body> -->
