--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h3>Could be a little offensive</h3>
       <p>Height in centimeters:</p>
       <input class="height-input-field" type="text" />
-      <p>weight in kilograms:</p>
+      <p>Weight in kilograms:</p>
       <input class="weight-input-field" type="text" /><br />
       <button class="calculate">Calculate</button>
     </div>
@@ -24,21 +24,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-<!-- <body>
-    <h1>BMI Calculator</h1>
-    <p>This is a simple BMI calculator</p>
-    <br />
-
-    <label for="weightinput">Weight in kg</label>
-    <input type="text" id="weightinput" name="weightinput" size="10" />
-
-    <label for="heightinput">Height in cm</label>
-    <input type="text" id="heightinput" name="heightinput" size="10" />
-    <br />
-    <button class="btn calculate">Calculate</button>
-    <br />
-
-    <label for="BMIoutput">Your BMI:</label>
-    <output class="bmioutput" name="bmioutput"></output>
-  <!-- </body> -->
