--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
   <body>
     <div class="calculator-container">
-      <h1>BMI CALCULATOR</h1>
-      <h3>Could be a little offensive</h3>
-      <p>Height in centimeters:</p>
-      <input class="height-input-field" type="text" />
-      <p>Weight in kilograms:</p>
-      <input class="weight-input-field" type="text" /><br />
-      <button class="calculate">Calculate</button>
+      <h1>BMI Calculator</h1>
+      <h3>May be slightly offensive to some people</h3>
+      <p>Height in cm:</p>
+      <input class="height-input" type="text" />
+      <p>Weight in kg:</p>
+      <input class="weight-input" type="text" /><br />
+      <button class="btn-calculate">Calculate BMI</button>
     </div>
-    <h3 class="result"></h3>
-    <p class="result-statement"></p>
+    <h3 class="results"></h3>
+    <p class="result-show"></p>
     <script src="script.js"></script>
   </body>
 </html>
