--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input class="height-input" type="text" />
       <p>Weight in kg:</p>
       <input class="weight-input" type="text" /><br />
-      <button class="btn-calculate">Calculate BMI</button>
+      <button class="btn-calculate" onclick="calcBMI()">Calculate BMI</button>
     </div>
     <h3 class="results"></h3>
     <p class="result-show"></p>
