--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <center>
       <img
         id="cup"
-        class="gif"
+        class="hide-glass"
         src="img\jurrasic-park-cup-of-water-3629715710.gif"
         width="75%"
       />
