--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
     <title>bmi HUB</title>
   </head>
   <body>
-    <header>
-      <img class="" src="/img/logo.svg" alt="bmi hub logo" />
+    <header class="text-center">
+      <img src="/img/logo.svg" alt="bmi hub logo" />
     </header>
 
-    <div class="calculator"></div>
+    <div class="calculator text-center "><p class="pt-3">Height in cm:</p>
+      <input class="height-input" type="text"/>
+      <p class="pt-5">Weight in kg:</p>
+      <input class="mb-3 weight-input" type="text" /><br />
+      <button
+        type="submit"
+        class="btn btn-light btn-calculate"
+        id="btn"
+        onclick="calcBMI()"
+      >
+        Calculate BMI
+      </button>
+    </div>
+    <p class="text-center pt-5">BMI:</p></div>
+    <h3 class="result-show results text-center"></h3>
   </body>
 </html>
