removed some text

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <img src="/img/logo.svg" alt="bmi hub logo" />
     </header>
 
-    <div class="calculator text-center "><p class="pt-3">Height in cm:</p>
-      <input class="height-input" type="text"/>
+    <div class="calculator text-center">
+      <p class="pt-3">Height in cm:</p>
+      <input class="height-input" type="text" />
       <p class="pt-5">Weight in kg:</p>
       <input class="mb-3 weight-input" type="text" /><br />
       <button
@@ -27,7 +28,6 @@
         Calculate BMI
       </button>
     </div>
-    <p class="text-center pt-5">BMI:</p></div>
-    <h3 class="result-show results text-center"></h3>
+    <h3 class="result-show results text-center pt-4"></h3>
   </body>
 </html>
